--- a/research.html
+++ b/research.html
@@ -84,7 +84,6 @@
           <span class="citation">
             <strong>Sticky Floors and Gendered Labour Structures: Discrimination, Education, and Household Barriers in Paraguay.</strong><br>
             Draft for CAF–WELAC 2025.<br>
-            <em>Co-author(s):</em> <span class="coauthors">TBD</span><br>
             <span class="summary">
               This paper investigates the gender pay gap in Paraguay, highlighting structural barriers that keep women in low-wage positions. It examines education, household constraints, and labour segmentation to explain the persistence of “sticky floors.”
             </span>
@@ -95,9 +94,9 @@
           <span class="citation">
             <strong>Information and Adjustment of Expectations (Peru).</strong><br>
             Field experiment.<br>
-            <em>Co-authors:</em> <span class="coauthors">Muchin Bazan (PUC Chile), Diego Esteban Quispe (PUC Perú)</span><br>
+            <em>Co-authors:</em> <span class="coauthors">Muchin Bazan (Pontificia Universidad Catolica de Chile.), Diego Esteban Quispe (Pontificia Universidad Catolica Perú)</span><br>
             <span class="summary">
-              A randomized field experiment that measures how providing information about previous cohorts’ performance affects students’ academic expectations and choices in a competitive summer program in Peru.
+              A randomised field experiment that measures how providing information about previous cohorts’ performance affects students’ academic expectations and choices in a competitive summer program in Peru.
             </span>
           </span>
         </li>
@@ -105,7 +104,7 @@
         <li class="pub-item">
           <span class="citation">
             <strong>Innovation and Productivity in Paraguay (CDM).</strong><br>
-            <em>Co-author:</em> <span class="coauthors">Selva Olmedo</span><br>
+            <em>Co-author:</em> <span class="coauthors">Selva Olmedo(Universidad de Santiago Compostela)</span><br>
             <span class="summary">
               Application of the Crépon–Duguet–Mairesse model to Paraguayan firm-level data. The study explores how innovation activities, knowledge protection, and sectoral heterogeneity affect productivity in manufacturing and services.
             </span>
