--- a/research.html
+++ b/research.html
@@ -83,7 +83,8 @@
         <li class="pub-item">
           <span class="citation">
             <strong>Sticky Floors and Gendered Labour Structures: Discrimination, Education, and Household Barriers in Paraguay.</strong><br>
-            Draft for CAF–WELAC 2025.<br>
+            Draft for CAF–WELAC 2025.<br>  
+            <a class="tag" href="papers/diagnostico_paraguay.pdf" target="_blank" rel="noopener">PDF</a>
             <span class="summary">
               This paper investigates the gender pay gap in Paraguay, highlighting structural barriers that keep women in low-wage positions. It examines education, household constraints, and labour segmentation to explain the persistence of “sticky floors.”
             </span>
@@ -104,7 +105,7 @@
         <li class="pub-item">
           <span class="citation">
             <strong>Innovation and Productivity in Paraguay (CDM).</strong><br>
-            <em>Co-author:</em> <span class="coauthors">Selva Olmedo(Universidad de Santiago Compostela)</span><br>
+            <em>Co-author:</em> <span class="coauthors">Selva Olmedo (Universidad de Santiago Compostela)</span><br>
             <span class="summary">
               Application of the Crépon–Duguet–Mairesse model to Paraguayan firm-level data. The study explores how innovation activities, knowledge protection, and sectoral heterogeneity affect productivity in manufacturing and services.
             </span>
