--- a/research.html
+++ b/research.html
@@ -83,8 +83,7 @@
         <li class="pub-item">
           <span class="citation">
             <strong>Sticky Floors and Gendered Labour Structures: Discrimination, Education, and Household Barriers in Paraguay.</strong><br>
-            Draft for CAF–WELAC 2025.<br>  
-            <a class="tag" href="papers/diagnostico_paraguay.pdf" target="_blank" rel="noopener">PDF</a>
+            Draft for CAF–WELAC 2025.<br> <a class="tag" href="draf_CAF.pdf" target="_blank" rel="noopener">PDF</a>
             <span class="summary">
               This paper investigates the gender pay gap in Paraguay, highlighting structural barriers that keep women in low-wage positions. It examines education, household constraints, and labour segmentation to explain the persistence of “sticky floors.”
             </span>
