--- a/media.html
+++ b/media.html
@@ -25,7 +25,7 @@
   <h3>Resources for Students</h3>
   <ul>
     <li><a href="WS"> Web Scrapping- Good Practices – slides (PDF)</a></li>
-    <li><a href="RTDS">Research Tools & Data Sources – quick guide</a></li>
+    <li><a href="RTDS.pdf">Research Tools & Data Sources – quick guide</a></li>
   </ul>
 
   <h3>Talks and Public Engagement</h3>
