--- a/media.html
+++ b/media.html
@@ -23,10 +23,11 @@
   <h2>Media and Resources</h2>
 
   <h3>Resources for Students</h3>
-  <ul>
-    <li><a href="WS"> Web Scrapping- Good Practices – slides (PDF)</a></li>
-    <li><a href="RTDS.pdf">Research Tools & Data Sources – quick guide</a></li>
-  </ul>
+<ul>
+  <li><a href="WS.pdf">Web Scraping – Good Practices (slides, PDF)</a></li>
+  <li><a href="RTDS.pdf">Research Tools & Data Sources – Quick Guide</a></li>
+</ul>
+
 
   <h3>Talks and Public Engagement</h3>
   <ul>
