--- a/media.html
+++ b/media.html
@@ -22,12 +22,11 @@
     <section id="media">
   <h2>Media and Resources</h2>
 
-  <h3>Resources for Students</h3>
+<h3>Resources for Students</h3>
 <ul>
-  <li><a href="WS.pdf">Web Scraping – Good Practices (slides, PDF)</a></li>
-  <li><a href="RTDS.pdf">Research Tools & Data Sources – Quick Guide</a></li>
+  <li><a href="cv.pdf" target="_blank" rel="noopener">Curriculum Vitae (PDF)</a></li>
+  <li><a href="RTDS.pdf" target="_blank" rel="noopener">Research Tools & Data Sources – Quick Guide (PDF)</a></li>
 </ul>
-
 
   <h3>Talks and Public Engagement</h3>
   <ul>
