--- a/media.html
+++ b/media.html
@@ -24,7 +24,7 @@
 
 <h3>Resources for Students</h3>
 <ul>
-  <li><a href="cv.pdf" target="_blank" rel="noopener">Curriculum Vitae (PDF)</a></li>
+  <li><a href="WS.pdf" target="_blank" rel="noopener">Web Scrapping- Good Practices (PDF)</a></li>
   <li><a href="RTDS.pdf" target="_blank" rel="noopener">Research Tools & Data Sources – Quick Guide (PDF)</a></li>
 </ul>
 
