--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="research.html">Research</a></li>
         <li><a href="phd-journey.html">PhD Journey</a></li>
         <li><a href="media.html">Media and Resources</a></li>
+        <li><a href="literary-space.html">Letras</a></li>
       </ul>
     </nav>
   </header>
