--- a/index.html
+++ b/index.html
@@ -24,15 +24,21 @@
   <main class="container">
     <img src="Profile_new_resized.jpg" alt="Profile_new_resized.jpg" class="profile-pic">
     <h1>Gabriela Noemi Villalba Marecos</h1>
-    <p>Welcome to my academic corner! Here you can explore my research interests, working papers, and teaching. I will try to share insights, reflections, and resources that guide my work in economics and development. </p>
+    <p>Welcome to my personal corner — a space where data meets stories, and where research is also a way to listen, question, and transform.Here you can explore my research interests, working papers, and teaching. I will try to share insights and reflections. </p>
 
     <h2>About Me</h2>
-    <p>I am a PhD candidate at the University of Sussex, specialising in <strong>Applied Microeconomics</strong>, with a focus on the economics of education, labour markets, and development economics.</p>
-    <p>My PhD research examines the effects of public policies on educational quality, labour market inequalities, and education outcomes. I am particularly interested in <strong>causal inference methods</strong>, including the use of Instrumental Variables (IV), Difference-in-Differences (DiD), and Event Study designs.</p>
-    <p>I often explore themes of <strong>development and inequality</strong> in the context of <strong>Latin America</strong>, where education and labour market dynamics present unique challenges and opportunities.</p>
-    <p>Beyond my core research, I am also interested in <strong>gender, social mobility</strong>, and the dynamics of <strong>less traditional markets</strong> — from fashion and sports to cultural behaviors. I’m drawn to understanding how economic forces shape and are shaped by the choices people make in these unique spaces.</p>
-    <p>This website is a space where I share research insights, reflections, and resources, especially for those interested in education policy, inequality, and the stories behind my journey.</p>
+ <p>I am a PhD candidate in Economics at the University of Sussex, specialising in <strong>Applied Microeconomics</strong>, with a focus on the economics of education, labour markets, and development.</p>
 
+  <p>My research explores how public policies affect educational quality and labour market outcomes — especially in contexts marked by inequality. I use <strong>causal inference methods</strong> such as Instrumental Variables (IV), Difference-in-Differences (DiD), and Event Studies to understand how systems shape (and often limit) human potential.</p>
+
+  <p>I work mainly with data from <strong>Latin America</strong>, but my questions are global: What makes a good education? Who gets access to opportunity? How do we measure change — and who gets to define it?</p>
+
+  <p>Beyond academic metrics, I’m also drawn to the quieter sides of economics: <strong>gender, social mobility, and less traditional markets</strong> — from sports and fashion to how people build dignity through work.</p>
+
+  <p>This website is more than a CV. It’s a place where I share research, teaching, reflections, and — occasionally — poetry. Because I believe we can be rigorous and human at once.</p>
+
+  <h2>CV</h2>
+  
     
     <h2>CV</h2>
     <p><a href="cv.pdf" target="_blank">Download my CV (PDF)</a></p>
