--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <main class="container">
     <img src="Profile_new_resized.jpg" alt="Profile_new_resized.jpg" class="profile-pic">
     <h1>Gabriela Noemi Villalba Marecos</h1>
-    <p>Welcome to my personal corner — a space where data meets stories, and where research is also a way to listen, question, and transform.Here you can explore my research interests, working papers, and teaching. I will try to share insights and reflections. </p>
+    <p>Welcome to my personal corner — a space where data meets stories, and where research is also a way to listen, question, and transform. Here you can explore my research interests, working papers, and teaching. I will try to share insights and reflections. </p>
 
     <h2>About Me</h2>
  <p>I am a PhD candidate in Economics at the University of Sussex, specialising in <strong>Applied Microeconomics</strong>, with a focus on the economics of education, labour markets, and development.</p>
@@ -33,7 +33,7 @@
 
   <p>I work mainly with data from <strong>Latin America</strong>, but my questions are global: What makes a good education? Who gets access to opportunity? How do we measure change — and who gets to define it?</p>
 
-  <p>Beyond academic metrics, I’m also drawn to the quieter sides of economics: <strong>gender, social mobility, and less traditional markets</strong> — from sports and fashion to how people build dignity through work.</p>
+  <p>Beyond academic metrics, I’m drawn to the quieter sides of economics — gender, social mobility, and the invisible scaffolding that shapes who gets a chance. But I also follow my curiosity — into sports, fashion, and other spaces that might not scream “economics,” but are full of meaning. These are not just interests; they’re questions worth researching — about innovation, value, and how people create identity through markets often overlooked by mainstream analysis.</p>
 
   <p>This website is more than a CV. It’s a place where I share research, teaching, reflections, and — occasionally — poetry. Because I believe we can be rigorous and human at once.</p>
 
