--- a/index.html
+++ b/index.html
@@ -26,19 +26,18 @@
     <h1>Gabriela Noemi Villalba Marecos</h1>
     <p>Welcome to my personal corner — a space where data meets stories, and where research is also a way to listen, question, and transform. Here you can explore my research interests, working papers, and teaching. I will try to share insights and reflections. </p>
 
-    <h2>About Me</h2>
- <p>I am a PhD candidate in Economics at the University of Sussex, specialising in <strong>Applied Microeconomics</strong>, with a focus on the economics of education, labour markets, and development.</p>
+   <h2>About Me</h2>
 
-  <p>My research explores how public policies affect educational quality and labour market outcomes — especially in contexts marked by inequality. I use <strong>causal inference methods</strong> such as Instrumental Variables (IV), Difference-in-Differences (DiD), and Event Studies to understand how systems shape (and often limit) human potential.</p>
+<p>I am a PhD candidate in Economics at the University of Sussex, specialising in <strong>Applied Microeconomics</strong>, with a focus on the economics of education, labour markets, and development.</p>
 
-  <p>I work mainly with data from <strong>Latin America</strong>, but my questions are global: What makes a good education? Who gets access to opportunity? How do we measure change — and who gets to define it?</p>
+<p>My research explores how public policies affect educational quality and labour market outcomes — especially in contexts marked by inequality. I use <strong>causal inference methods</strong> such as Instrumental Variables (IV), Difference-in-Differences (DiD), and Event Studies to understand how systems shape — and often limit — human potential.</p>
 
-  <p>Beyond academic metrics, I’m drawn to the quieter sides of economics — gender, social mobility, and the invisible scaffolding that shapes who gets a chance. But I also follow my curiosity — into sports, fashion, and other spaces that might not scream “economics,” but are full of meaning. These are not just interests; they’re questions worth researching — about innovation, value, and how people create identity through markets often overlooked by mainstream analysis.</p>
+<p>I work mainly with data from <strong>Latin America</strong>, but my questions are global: What makes a good education? Who gets access to opportunity? How do we measure change — and who gets to define it?</p>
 
-  <p>This website is more than a CV. It’s a place where I share research, teaching, reflections, and — occasionally — poetry. Because I believe we can be rigorous and human at once.</p>
+<p>Beyond academic metrics, I’m drawn to the quieter sides of economics — gender, social mobility, and the invisible scaffolding that shapes who gets a chance.  But I also follow my curiosity — into sports, fashion, and other spaces that might not scream “economics” but are full of meaning.  These are not just interests; they’re questions worth researching — about innovation, value, and how people create identity through markets often overlooked by mainstream analysis.</p>
 
-  <h2>CV</h2>
-  
+<p>This website is more than a CV. It’s a place where I share research, teaching, reflections, and — occasionally — poetry. Because I believe we can be rigorous and human at once.</p>
+
     
     <h2>CV</h2>
     <p><a href="cv.pdf" target="_blank">Download my CV (PDF)</a></p>
