--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <main class="container">
     <img src="Profile_new_resized.jpg" alt="Profile_new_resized.jpg" class="profile-pic">
     <h1>Gabriela Noemi Villalba Marecos</h1>
-    <p>Welcome to my personal corner — a space where data meets stories, and where research is also a way to listen, question, and transform. Here you can explore my research interests, working papers, and teaching. I will try to share insights and reflections. </p>
+    <p>Welcome to my personal corner !!! This is a space where data meets stories, and where research is also a way to listen, question, and transform. Here, you’ll find my research interests, working papers, and teaching activities. But also poems, reflections, and blog posts about the experience of being. </p>
 
    <h2>About Me</h2>
 
