--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <p>I am a PhD candidate in Economics at the University of Sussex, specialising in <strong>Applied Microeconomics</strong>, with a focus on the economics of education, labour markets, and development.</p>
 
-<p>My research explores how public policies affect educational quality and labour market outcomes, especially in contexts marked by inequality. I use <strong>causal inference methods</strong> such as Instrumental Variables (IV), Difference-in-Differences (DiD), and Event Studies to understand how systems shape — and often limit — human potential.</p>
+<p>My research explores how public policies affect educational quality and labour market outcomes, especially in contexts marked by inequality. I use <strong>causal inference methods</strong> such as Instrumental Variables (IV), Difference-in-Differences (DiD), and Event Studies to understand how systems shape, and often limit, human potential.</p>
 
 <p>I work mainly with data from <strong>Latin America</strong>, but my questions are global: What makes a good education? Who gets access to opportunity? How do we measure change, and who gets to define it?</p>
 
