--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <p>Beyond academic metrics, I’m drawn to the quieter sides of economics: gender, social mobility, and the invisible scaffolding that shapes who gets a chance.  But I also follow my curiosity into sports, fashion, and other spaces that might not scream “economics” but are full of meaning.  These are not just interests; they’re questions worth researching about innovation, value, and how people create identity through markets often overlooked by mainstream analysis.</p>
 
-<p>This website is more than a CV. It’s a place where I share research, teaching, reflections, and — occasionally — poetry. Because I believe we can be rigorous and human at once.</p>
+<p>This website is more than a CV. It’s a place where I share research, teaching, reflections, and occasionally poetry. Because I believe we can be rigorous and human at once.</p>
 
     
     <h2>CV</h2>
