--- a/research.html
+++ b/research.html
@@ -33,6 +33,7 @@
         <li><a href="phd-journey.html">PhD Journey</a></li>
         <li><a href="media.html">Media and Resources</a></li>
         <li><a href="literary-space.html">Letras</a></li>
+        <li><a href="literary-space.html">Letras</a></li>
       </ul>
     </nav>
   </header>
