--- a/literary-space.html
+++ b/literary-space.html
@@ -5,12 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mi voz entre datos | gNoemi V.</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    /* --- Minimal styles just for the bilingual layout and poem look --- */
+    .container { max-width: 900px; margin: 0 auto; padding: 1.5rem; }
+    h1 { margin-top: 1rem; }
+    .author-note { margin: 1.5rem 0; }
+    .poem { margin: 2rem 0; line-height: 1.8; }
+    .poem h2 { margin-bottom: 0.5rem; }
+    .bilingual { display: grid; grid-template-columns: 1fr; gap: 2rem; align-items: start; }
+    .bilingual .poem-es, .bilingual .poem-en { padding: 1rem; border-radius: 12px; }
+    .bilingual .poem-es { background: #fafafa; }
+    .bilingual .poem-en { background: #f5f5f5; }
+    @media (min-width: 900px) {
+      .bilingual { grid-template-columns: 1fr 1fr; }
+    }
+    /* Optional small divider */
+    hr { border: 0; border-top: 1px solid #e5e5e5; margin: 2rem 0; }
+    /* Active link hint if your CSS doesn't already have it */
+    nav a.active { text-decoration: underline; }
+  </style>
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Inicio</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="teaching.html">Teaching</a></li>
         <li><a href="research.html">Research</a></li>
         <li><a href="phd-journey.html">PhD Journey</a></li>
@@ -24,8 +43,8 @@
     <h1>Mi voz entre datos</h1>
     <p><em>Poemas y reflexiones de gNoemi V.</em></p>
 
-    <section class="author-note">
-      <h2>Nota de autora</h2>
+    <section class="author-note" aria-labelledby="nota-autora">
+      <h2 id="nota-autora">Nota de autora</h2>
       <p>
         Entre el ruido de papers sin cerrar, scripts que fallaban y búsquedas eternas de datos, apareció esto: poesía.
         No lo planeé. Solo pasó.
@@ -44,38 +63,154 @@
 
     <hr>
 
-    <section class="poem">
-      <h2>Ser en el borde</h2>
-      <p>Se mueve fácil en el mundo,<br>
-      lidera, propone, traduce lo que no se nombra.<br>
-      Lee rostros, capta señales,<br>
-      acomoda silencios antes de que duelan.<br><br>
+    <section class="poem bilingual" aria-label="Ser en el borde - bilingüe">
+      <div class="poem-es" lang="es">
+        <h2>Ser en el borde</h2>
+        <p>Se mueve con soltura por el mundo,<br>
+        propone, traduce lo que no se nombra.<br>
+        Lee rostros, sigue señales,<br>
+        suaviza los silencios antes de que hieran.<br><br>
 
-      ...<br>
-      (puedo mostrarlo entero o fragmentado por entrada)</p>
+        Maneja la conversación,<br>
+        pero no el juego.<br>
+        Cae bien,<br>
+        pero no aterriza.<br>
+        Se repliega,<br>
+        pero no pertenece del todo.<br><br>
+
+        Tiene compañía,<br>
+        pero no refugio.<br>
+        Habla con muchas voces,<br>
+        pero a veces solo escucha su propio eco.<br><br>
+
+        No le falta gente,<br>
+        le falta sintonía.<br>
+        No es silencio,<br>
+        son demasiadas palabras sin latido.<br><br>
+
+        Y en el ruido de los encuentros,<br>
+        en la fiesta sin fondo,<br>
+        algo se vuelve eco.<br>
+        Y no regresa.<br><br>
+
+        Y aun así,<br>
+        permanece en los bordes.<br>
+        No sobrevive: existe.<br>
+        Ser en el borde, también es ser.<br>
+        Observa, se queda,<br>
+        resiste a reducirse.<br><br>
+
+        Vino con hondura,<br>
+        no para encajar en moldes.<br>
+        Y si incomoda,<br>
+        es porque lo real<br>
+        rara vez cabe en lo fácil.<br><br>
+
+        No está sola.<br>
+        Está consigo.<br>
+        No es menos.<br>
+        Es singular.<br>
+        Y eso basta.<br>
+        Porque no falta nada<br>
+        cuando se aprende<br>
+        a ser.
+        </p>
+      </div>
+      <div class="poem-en" lang="en">
+        <h2>Being at the Edge</h2>
+        <p>Moves easily through the world,<br>
+        leads, offers, gives name to what goes unnamed.<br>
+        Reads faces, follows signals,<br>
+        softens silence before it hurts.<br><br>
+
+        Fluent in conversation,<br>
+        but not in the game.<br>
+        Well-liked,<br>
+        but never fully lands.<br>
+        Folds in,<br>
+        but never truly belongs.<br><br>
+
+        Has friends,<br>
+        but no trenches.<br>
+        Presence,<br>
+        but not refuge.<br>
+        Speaks with many,<br>
+        but sometimes hears only the echo.<br><br>
+
+        Lacks no people,<br>
+        but craves resonance.<br>
+        Not silence—<br>
+        just too many words without a pulse.<br><br>
+
+        And in the noise of gatherings,<br>
+        in the party with no depth,<br>
+        something becomes echo.<br>
+        And doesn’t return.<br><br>
+
+        Still,<br>
+        remains at the edge.<br>
+        Doesn’t just survive—exists.<br>
+        Being at the edge is still being.<br>
+        Watches, stays,<br>
+        refuses to shrink.<br><br>
+
+        Came with depth,<br>
+        not to fit a mold.<br>
+        And if it unsettles,<br>
+        it’s because what’s real<br>
+        rarely fits what’s easy.<br><br>
+
+        Not alone.<br>
+        With oneself.<br>
+        Not less.<br>
+        Singular.<br>
+        And that is enough.<br>
+        Because nothing is missing<br>
+        once one learns<br>
+        to be.
+        </p>
+      </div>
     </section>
 
-    <section class="poem">
-      <h2>Volcán en silencio</h2>
+    <hr>
+
+    <section class="poem" lang="es" aria-labelledby="volcan-en-silencio">
+      <h2 id="volcan-en-silencio">Volcán en silencio</h2>
       <p>No confundas<br>
       mi silencio<br>
       con frialdad.<br><br>
 
-      ...</p>
+      No confundas<br>
+      mi calma<br>
+      con falta de pasión.<br><br>
+
+      Hay fuegos<br>
+      que no chispean,<br>
+      pero queman igual.<br><br>
+
+      Hay volcanes<br>
+      bajo el hielo<br>
+      que parecen quietos<br>
+      hasta que el mundo tiembla.<br><br>
+
+      Yo soy eso.<br>
+      No alzo la voz.<br>
+      No me apuro.<br><br>
+
+      Mi pausa no es vacío.<br>
+      Mi quietud no es distancia.<br>
+      Mi voz baja no es rendición.<br><br>
+
+      Lo que arde en mí<br>
+      no pide permiso.<br>
+      No hace alarde.<br>
+      Solo crece.<br>
+      Y va hondo.<br><br>
+
+      Pocas lo ven,<br>
+      menos lo viven.
+      </p>
     </section>
-
-    <section class="poem">
-      <h2>Lo siento 100% mío</h2>
-      <p>Me miran raro a veces.<br>
-      Como si escribir así<br>
-      fuera trampa,<br>
-      o silencio maquillado.<br><br>
-
-      ...</p>
-    </section>
-
-    <!-- Puedes seguir agregando más secciones así -->
-
   </main>
 </body>
 </html>
