--- a/literary-space.html
+++ b/literary-space.html
@@ -46,17 +46,15 @@
     <section class="author-note" aria-labelledby="nota-autora">
       <h2 id="nota-autora">Nota de autora</h2>
       <p>
-        Entre el ruido de papers sin cerrar, scripts que fallaban y búsquedas eternas de datos, apareció esto: poesía.
+        Entre la espera de papers sin cerrar, scripts que fallaban y búsquedas eternas de datos, apareció esto: poesía.
         No lo planeé. Solo pasó.
       </p>
       <p>
-        Empecé a escribir para no desbordarme. Para entenderme. Para no perder la voz entre tanto dato.
+        Empecé a escribir para no desbordarme. Para entenderme. Para no perder la voz entre tanto y tanto.
         Y de repente, esa voz me mostró que también podía ser esto: una parte de mí que no publica en journals, pero sí late. Una parte que no justifica, pero dice.
       </p>
       <p>
-        Este espacio es eso: lo que quedó cuando me escuché sin filtros.
-        Cuando no fui la doctoranda. Ni la economista.
-        Solo fui.
+        Este espacio es eso: lo que quedó cuando me escuché sin filtros...
       </p>
       <p><strong>— gNoemi V.</strong></p>
     </section>
@@ -66,12 +64,12 @@
     <section class="poem bilingual" aria-label="Ser en el borde - bilingüe">
       <div class="poem-es" lang="es">
         <h2>Ser en el borde</h2>
-        <p>Se mueve con soltura por el mundo,<br>
-        propone, traduce lo que no se nombra.<br>
-        Lee rostros, sigue señales,<br>
-        suaviza los silencios antes de que hieran.<br><br>
+        <p>Se mueve fácil en el mundo,<br>
+        lidera, propone, traduce lo que no se nombra.<br>
+        Lee rostros, capta señales,<br>
+        acomoda silencios antes de que duelan.<br><br>
 
-        Maneja la conversación,<br>
+        Domina la charla,<br>
         pero no el juego.<br>
         Cae bien,<br>
         pero no aterriza.<br>
@@ -80,16 +78,16 @@
 
         Tiene compañía,<br>
         pero no refugio.<br>
-        Habla con muchas voces,<br>
-        pero a veces solo escucha su propio eco.<br><br>
+        Conversa con todoss,<br>
+        pero a veces se escucha sola.<br><br>
 
         No le falta gente,<br>
         le falta sintonía.<br>
         No es silencio,<br>
-        son demasiadas palabras sin latido.<br><br>
+        es exceso de lenguaje sin alma.<br><br>
 
-        Y en el ruido de los encuentros,<br>
-        en la fiesta sin fondo,<br>
+        Pero en los patios del ruido,<br>
+        en la fiesta del sinfondo,<br>
         algo se vuelve eco.<br>
         Y no regresa.<br><br>
 
@@ -97,23 +95,21 @@
         permanece en los bordes.<br>
         No sobrevive: existe.<br>
         Ser en el borde, también es ser.<br>
-        Observa, se queda,<br>
-        resiste a reducirse.<br><br>
+        Observa, habita,<br>
+        no se reduce.<br><br>
 
-        Vino con hondura,<br>
-        no para encajar en moldes.<br>
+        Vino con profundidad,<br>
+        no con moldes.<br>
         Y si incomoda,<br>
         es porque lo real<br>
-        rara vez cabe en lo fácil.<br><br>
+        rara vez cabe en lo simple<br><br>
 
         No está sola.<br>
         Está consigo.<br>
         No es menos.<br>
         Es singular.<br>
         Y eso basta.<br>
-        Porque no falta nada<br>
-        cuando se aprende<br>
-        a ser.
+  
         </p>
       </div>
       <div class="poem-en" lang="en">
@@ -165,9 +161,6 @@
         Not less.<br>
         Singular.<br>
         And that is enough.<br>
-        Because nothing is missing<br>
-        once one learns<br>
-        to be.
         </p>
       </div>
     </section>
@@ -193,7 +186,8 @@
       que parecen quietos<br>
       hasta que el mundo tiembla.<br><br>
 
-      Yo soy eso.<br>
+      Eso soy.<br>
+      soy eso?<br>
       No alzo la voz.<br>
       No me apuro.<br><br>
 
@@ -204,8 +198,7 @@
       Lo que arde en mí<br>
       no pide permiso.<br>
       No hace alarde.<br>
-      Solo crece.<br>
-      Y va hondo.<br><br>
+      Solo crece.<br><br>
 
       Pocas lo ven,<br>
       menos lo viven.
