--- a/literary-space.html
+++ b/literary-space.html
@@ -186,7 +186,7 @@
       que parecen quietos<br>
       hasta que el mundo tiembla.<br><br>
 
-      Eso soy.<br>
+      Eso soy,<br>
       soy eso?<br>
       No alzo la voz.<br>
       No me apuro.<br><br>
