--- a/literary-space.html
+++ b/literary-space.html
@@ -78,7 +78,7 @@
 
         Tiene compañía,<br>
         pero no refugio.<br>
-        Conversa con todoss,<br>
+        Conversa con todos,<br>
         pero a veces se escucha sola.<br><br>
 
         No le falta gente,<br>
@@ -204,6 +204,65 @@
       menos lo viven.
       </p>
     </section>
+    <section class="poem bilingual" aria-labelledby="ser-incluso-asi">
+  <div class="poem-es" lang="es">
+    <h2 id="ser-incluso-asi">Ser — incluso así</h2>
+    <p>
+      Solía creer<br>
+      que bastaba con entender,<br>
+      que al guardarlos en la mente<br>
+      quitármelo,<br>
+      imposible sería.<br><br>
+
+      Ideas que empujan,<br>
+      sentidos que piden cuerpo,<br>
+      tanto adentro<br>
+      quedarse quietas no pueden.<br><br>
+
+      No soy lo que era<br>
+      cuando bastaba callar.<br>
+      No soy lo que pienso.<br>
+      Soy lo que escribo,<br>
+      porque si lo convierto en letras,<br>
+      me deja hablar.<br><br>
+
+      Estoy llena de ideas,<br>
+      de objetivos sin nombre.<br>
+      No es desbordar.<br>
+      Es apenas<br>
+      aprender a ser.
+    </p>
+  </div>
+  <div class="poem-en" lang="en">
+    <h2>Being — even like this</h2>
+    <p>
+      I used to believe<br>
+      That understanding was enough,<br>
+      that if I held things in my mind,<br>
+      They couldn’t be taken from me.<br>
+      Impossible.<br><br>
+
+      Ideas that push,<br>
+      meanings that ask for a body —<br>
+      so much inside<br>
+      cannot stay still for long.<br><br>
+
+      I’m not who I was<br>
+      When silence was enough.<br>
+      I’m not what I think.<br>
+      I’m what I write,<br>
+      because turning it into words<br>
+      let it speak.<br><br>
+
+      I’m full of thoughts,<br>
+      of unnamed goals.<br>
+      It’s not overflow.<br>
+      It’s simply<br>
+      learning to be.
+    </p>
+  </div>
+</section>
+
   </main>
 </body>
 </html>
