--- a/teaching.html
+++ b/teaching.html
@@ -20,28 +20,31 @@
     </nav>
   </header>
   <main class="container">
-    <section id="teaching">
+   <section id="teaching">
   <h2>Teaching</h2>
-      
-  <p>I am committed to inclusive and applied teaching, where students engage critically with real-world data and policy challenges. I aim to foster analytical skills and independent thinking through active learning and clear communication.</p>
+
+  <p>I am committed to inclusive and applied teaching, where students engage critically with real‑world data and policy challenges. I aim to foster analytical skills and independent thinking through active learning and clear communication.</p>
 
   <h3>Current Teaching</h3>
+  <p><em>As part of the Doctoral Tutor programme at Sussex, I support undergraduate teaching under academic supervision.</em></p>
   <ul>
-    <li><strong>Doctoral Tutor</strong> – Quantitative Methods for Business and Economics (QMBE), University of Sussex (2025)</li>
-    <li><strong>Doctoral Tutor</strong> – Mathematics and Programming, University of Sussex (2024–present)</li>
+    <li><a href="https://www.sussex.ac.uk/study/modules/undergraduate/2024/100998-introduction-to-econometrics-level-5" target="_blank" rel="noopener">Introduction to Econometrics (Level 5)</a>, University of Sussex (Autumn term, 2025)</li>
+    <li>Mathematics and Programming, University of Sussex (2024–present)</li>
   </ul>
 
   <h3>Past Teaching</h3>
   <ul>
-    <li><strong>Teaching Assistant</strong> – Economic Growth, Universidad Nacional de Asunción (2021–2024)</li>
-    <li><strong>Teaching Assistant</strong> – Macroeconomics, Universidad Nacional de Asunción (2021)</li>
+    <li><a href="https://www.sussex.ac.uk/study/modules/undergraduate/2024/86313-quantitative-methods-for-business-and-economics-maths" target="_blank" rel="noopener">Quantitative Methods for Business and Economics: Maths</a>, University of Sussex (Spring term, 2025)</li>
+    <li>Economic Growth, Universidad Nacional de Asunción (2021–2024)</li>
+    <li>Macroeconomics, Universidad Nacional de Asunción (2021)</li>
   </ul>
 
   <h3>Workshops and Training</h3>
   <ul>
-    <li><strong>Workshop Facilitator</strong> – Applied Data Analysis</li>
+    <li>Applied Data Analysis – Workshop Facilitator</li>
   </ul>
 </section>
+
   </main>
 </body>
 </html>
