--- a/research.html
+++ b/research.html
@@ -39,7 +39,7 @@
   </header>
 
   <main class="container research">
-    <h1>Publications & Research</h1>
+    <h1>Research</h1>
 
     <!-- PhD Research -->
     <section>
@@ -57,7 +57,7 @@
           <span class="citation">
             <strong>The Impact of T Levels on Education Outcomes in the UK.</strong>
             <span class="summary">
-              This project studies how the rollout of T Levels influences post-16 educational choices, completion, and equity across gender, socioeconomic background, and regions in England. Combining Difference-in-Differences estimates with a structural choice model, it explores mechanisms such as stigma, availability, and policy counterfactuals.
+              This project examines the impact of the rollout of T Levels on post-16 educational choices, completion rates, and equity across gender, socioeconomic background, and regions in England. Combining Difference-in-Differences estimates with a structural choice model, it explores mechanisms such as stigma, availability, and policy counterfactuals.
             </span>
           </span>
         </li>
@@ -66,32 +66,34 @@
 
     <!-- Publications -->
     <section>
-      <h2>Publications</h2>
-      <ul class="pub-list">
-        <li class="pub-item">
-          <span class="citation">
-            <strong>Diagnóstico del Desarrollo. Paraguay, 2001–2020.</strong><br>
-            Lovera, D. &amp; Villalba, G. (2022). <em>Ciencias Económicas</em>, 3(5), 90–106.
-            <a class="tag" href="papers/diagnostico_paraguay.pdf" target="_blank" rel="noopener">PDF</a>
-          </span>
-        </li>
-      </ul>
-    </section>
+  <h2>Publications</h2>
+  <ul class="pub-list">
+    <li class="pub-item">
+  <span class="citation">
+    <strong>Diagnóstico del Desarrollo. Paraguay, 2001–2020.</strong><br>
+    Lovera, D. &amp; Villalba, G. (2022). <em>Ciencias Económicas</em>, Vol. 3 Núm. 5. Article científico.<br>
+    <a class="tag" href="https://revistascientificas.una.py/index.php/reco/article/view/2508" target="_blank" rel="noopener">Ver artículo / PDF</a>
+    <span class="summary">
+      Análisis descriptivo‑analítico realizado durante mi etapa pre‑Máster, con enfoque documental‑bibliográfico. Se examinan brechas de ingreso per cápita y desigualdad en Paraguay entre 2001‑2020, apoyado en métodos deductivo, analítico y sintético, además de la metodología de Hausmann, Rodrick y Velasco.
+    </span>
+  </span>
+</li>
 
     <!-- Research in Progress -->
     <section>
-      <h2>Research in Progress</h2>
-      <ul class="pub-list">
-        <li class="pub-item">
-          <span class="citation">
-            <strong>Sticky Floors and Gendered Labour Structures: Discrimination, Education, and Household Barriers in Paraguay.</strong><br>
-            Draft for CAF–WELAC 2025.<br> <a class="tag" href="draf_CAF.pdf" target="_blank" rel="noopener">PDF</a>
-            <span class="summary">
-              This paper investigates the gender pay gap in Paraguay, highlighting structural barriers that keep women in low-wage positions. It examines education, household constraints, and labour segmentation to explain the persistence of “sticky floors.”
-            </span>
-          </span>
-        </li>
-
+     <h2>Research in Progress</h2>
+<ul class="pub-list">
+  <li class="pub-item">
+    <span class="citation">
+      <strong>Sticky Floors and Gendered Labour Structures: Discrimination, Education, and Household Barriers in Paraguay.</strong><br>
+      Draft for CAF–WELAC 2025.<br>
+      <a class="tag" href="papers/draft_CAF.pdf" target="_blank" rel="noopener">PDF</a>
+      <span class="summary">
+        This paper examines the gender pay gap in Paraguay, highlighting the structural barriers that prevent women from securing higher-wage positions. It explores the role of education, household constraints, and labour segmentation in explaining the persistence of “sticky floors.”<br>
+        <em>This project originated during my Master’s studies at the University of Sussex and has since evolved into a broader empirical investigation.</em>
+      </span>
+    </span>
+  </li>
         <li class="pub-item">
           <span class="citation">
             <strong>Information and Adjustment of Expectations (Peru).</strong><br>
