--- a/research.html
+++ b/research.html
@@ -81,19 +81,23 @@
 
     <!-- Research in Progress -->
     <section>
-     <h2>Research in Progress</h2>
+    <h2>Research in Progress</h2>
 <ul class="pub-list">
   <li class="pub-item">
     <span class="citation">
       <strong>Sticky Floors and Gendered Labour Structures: Discrimination, Education, and Household Barriers in Paraguay.</strong><br>
       Draft for CAF–WELAC 2025.<br>
-      <a class="tag" href="papers/draft_CAF.pdf" target="_blank" rel="noopener">PDF</a>
+      <a class="tag" href="
+        https://osf.io/twm42/?view_only=a972124bef864804b9c7ae6a9d376811" target="_blank" rel="noopener">View Draft on OSF</a>
       <span class="summary">
         This paper examines the gender pay gap in Paraguay, highlighting the structural barriers that prevent women from securing higher-wage positions. It explores the role of education, household constraints, and labour segmentation in explaining the persistence of “sticky floors.”<br>
-        <em>This project originated during my Master’s studies at the University of Sussex and has since evolved into a broader empirical investigation.</em>
+        <em>This project originated during my Master’s studies at the University of Sussex and has since evolved into a broader empirical investigation.</em><br>
+        
       </span>
     </span>
   </li>
+</ul>
+
         <li class="pub-item">
           <span class="citation">
             <strong>Information and Adjustment of Expectations (Peru).</strong><br>
