--- a/media.html
+++ b/media.html
@@ -25,6 +25,7 @@
 
 <h3>Resources for Students</h3>
 <ul>
+  <li><a href="Math_Study_Notes.pdf" target="_blank" rel="noopener">Math Concepts Review (PDF)</a></li>
   <li><a href="WS.pdf" target="_blank" rel="noopener">Web Scrapping- Good Practices (PDF)</a></li>
   <li><a href="RTDS.pdf" target="_blank" rel="noopener">Research Tools & Data Sources – Quick Guide (PDF)</a></li>
 </ul>
