--- a/literary-space.html
+++ b/literary-space.html
@@ -262,6 +262,17 @@
     </p>
   </div>
 </section>
+<section class="blog-preview">
+  <h2><a href="manual-emocional.html">Entrada 1 – Manual emocional (y estilístico)</a></h2>
+  <p class="preview-subtitle">Tu valija emocional: lo que no pesa en kilos, pero pesa igual</p>
+  <p><em>por gNoemi V.</em></p>
+  <p>
+    Un texto para quienes llegan lejos sin dejarse atrás.  
+    Lo que empacamos sin darnos cuenta, lo que sostiene, lo que dejamos...  
+    Y cómo encontrar(te) en el viaje.  
+  </p>
+  <p><a href="manual-emocional.html">→ Leer entrada completa</a></p>
+</section>
 
   </main>
 </body>
