--- a/media.html
+++ b/media.html
@@ -35,9 +35,12 @@
     <li><a href="#">Conference Slides: Gender Gaps in Paraguay</a></li>
   </ul>
 
-  <h3>Reflections and Blog</h3>
-  <p>This space will include short reflections and commentary on education, development, and the journey of doing research from Latin America to the UK.</p>
-  <p><em>Coming soon...</em></p>
+ <h3>Reflections and Blog</h3>
+<p>This space includes short reflections on teaching, research, and the journey of doing a PhD as a Latin American student in the UK.</p>
+<ul>
+  <li><a href="letters-balcony-1.html">Letter 1: To those of us who teach while doing a PhD</a></li>
+</ul>
+
 
   <h3>Useful Links</h3>
   <ul>
